* Fixed: Flip Box - Link was not working if fade effect is selected
* Added: Counter - Thousand separator option
* Added: Logo Grid - Randomize logos option
* Added: Content Ticker - Options to show post date and time
* Enhancement: Content Ticker - Added recommended icons for post author and category
* Fixed: Buttons - Tooltip position option was not working

== 2.1.5 ==
Release date: October 8, 2020
* Added: Info Box Carousel - Border radius option for slides
* Added: Buttons - Image Size option
* Enhancement: Buttons - Added alt tag to image mark-up

== 2.1.4 ==
Release date: September 14, 2020
* Added: Info Box, Info Box Carousel - Option to show button in case of link type box option
* Enhancement: Info Box Carousel - Updated Choose Arrow control
* Fixed: Logo Grid - Greyscale option was not working in editor
* Added: Image Hotspots - Typography option for hotspot type text
* Added: Image Hotspots - Option to keep tooltips always open

== 2.1.3 ==
Release date: August 31, 2020
* Fixed: Buttons - Tooltip styling options were not working in buttons widget
* Fixed: Info Box Carousel - Icon type image was not showing on frontend
* Fixed: PHP error in template library

== 2.1.2 ==
Release date: August 25, 2020
* Enhancement: Compatibility to Elementor 3.0

== 2.1.1 ==
Release date: August 25, 2020
* Fixed: Posts - Ajax error after updating to WP 5.5

== 2.1.0 ==
Release date: August 11, 2020
* New: Posts widget
* Fixed: Image Accordion - Stack On option was not working

== 2.0.0 ==
Release date: July 29, 2020
* New: Template Library
* Added: Team Member Carousel -  border, radius and padding options for team member box
* Added: Flipbox - Icon text option
* Added: Flipbox - Title HTML tag option

== 1.3.0 ==
Release date: July 20, 2020
* Enhancement: Updated admin panel UI
* Added: Advanced Accordion - Toggle icon alignment and few other styling options
* Fixed: Hotspots - Hotspot text was not visible on hover