@@ -1395,21 +1395,17 @@ div[class*=' pa-'] {
 @-webkit-keyframes pp-glow {
   0% {
     transform: scale(1);
-    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.8);
     opacity: 1; }
   100% {
     transform: scale(1.5);
-    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0);
     opacity: 0; } }
 
 @keyframes pp-glow {
   0% {
     transform: scale(1);
-    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.8);
     opacity: 1; }
   100% {
     transform: scale(1.5);
-    box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0);
     opacity: 0; } }
 
 .tipso_content p:last-child {
